# planner

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
accounts/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_accounts_api.py
entries/: models.py
entries/migrations/: 0001_initial.py
ephemera/: asgi.py  settings.py  urls.py  wsgi.py
