[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["MarkoM-dot <83985775+MarkoM-dot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
environs = {extras = ["django"], version = "^9.5.0"}
psycopg2-binary = "^2.9.5"
drf-spectacular = "^0.24.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
